--- a/quest/index.html
+++ b/quest/index.html
@@ -140,7 +140,7 @@
 			z-index: 1000000;
 			background: lightblue url("pics/win.jpg") no-repeat fixed center;
 			background-size: cover;
-			display: hidden;
+			display: none;
 		}
 	</style>
 </head>
